<resources>
    <string name="app_name">ArtBookTesting</string>
    <string name="empty_description">NA</string>
    <string name="art_name">Art Name</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_artist">Enter Artist</string>
    <string name="enter_name">Enter Name</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="find_image">Find Image</string>
    <string name="image">Image</string>
    <string name="template_name">Name: %1$s</string>
    <string name="template_artist">Artist Name :  %1$s</string>
    <string name="template_year">Year :  %1$s</string>
</resources>